validate text limit add delete button & prop css keep space

--- a/src/index.css
+++ b/src/index.css
@@ -67,6 +67,7 @@ textarea:focus{
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  white-space: pre-wrap;
 }
 
 .note-footer{
